# CosyVoice3_ComfyUI

./: __init__.py  pyproject.toml  readme.md  requirements.txt  web.py
cosyvoice/cli/: frontend.py
cosyvoice/cli/.ipynb_checkpoints/: cosyvoice-checkpoint.py
cosyvoice/utils/.ipynb_checkpoints/: file_utils-checkpoint.py
