[project]
name = "cosyvoice3_comfyui"
description = "simple ComfyUI nodes for CosyVoice3"
version = "1.0.5"
license = "Apache-2.0"
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "modelscope",
    "transformers>=4.40.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "onnxruntime>=1.18.0",
    "HyperPyYAML>=1.2.0",
    "conformer>=0.3.2",
    "omegaconf>=2.3.0",
    "inflect>=7.0.0",
    "hydra-core>=1.3.0",
    "pydantic>=2.0.0",
    "x-transformers>=2.0.0",
    "openai-whisper",
    "diffusers>=0.29.0",
    "WeTextProcessing",
    "pyarrow>=14.0.0",
    "pyworld>=0.3.0"
]

[project.urls]
Repository = "https://github.com/benda1989/CosyVoice3_ComfyUI"

[tool.comfy]
PublisherId = "benda1989"
DisplayName = "GKK·CosVoice3"
Icon = ""
